# extend-svs

./: .gitignore  Anchor.toml  CHANGELOG.md  CONTRIBUTING.md  PLAN.md  README.md  package.json
.github/workflows/: publish.yml  test.yml
docs/: PRIVACY.md  README.md  SECURITY.md  SVS-1.md  SVS-3.md  SVS-4.md  SVS-5.md  SVS-6.md  SVS-8.md  TESTING.md  specs-SVS05.md
programs/svs-5/: Cargo.toml
programs/svs-6/: Cargo.toml
programs/svs-7/: Cargo.toml
programs/svs-7/src/: constants.rs  error.rs  events.rs  lib.rs  state.rs
programs/svs-7/src/instructions/: admin.rs  deposit_sol.rs  deposit_wsol.rs  initialize.rs  mint_sol.rs  mint_wsol.rs  mod.rs  module_admin.rs  redeem_sol.rs  redeem_wsol.rs  view.rs  withdraw_sol.rs  withdraw_wsol.rs
programs/svs-8/: Cargo.toml  keypair.json
scripts/: vault-info.ts
scripts/shared/: common-helpers.ts  proof-helpers.ts
scripts/svs-1/: README.md  edge-cases.ts  full-drain.ts  helpers.ts  inflation-attack.ts  live-balance.ts  view-functions.ts  withdraw-mint.ts
scripts/svs-2/: basic.ts  edge-cases.ts  helpers.ts  inflation-attack.ts  multi-user.ts  slippage.ts  stored-balance.ts  sync-timing-attack.ts  sync.ts  view-functions.ts
scripts/svs-3/: basic.ts  confidential-deposit.ts  confidential-redeem.ts  confidential-withdraw.ts  configure-account.ts  edge-cases.ts  helpers.ts  view-functions.ts
scripts/svs-4/: basic.ts  confidential-redeem.ts  edge-cases.ts  helpers.ts  (+2 more)
tests/: edge-cases.ts  svs-1.ts  svs-3.ts  svs-5.ts  svs-6.ts  svs-7.ts  svs-8.ts
trident-tests/: Cargo.toml  FUZZ_ISSUES.md  Trident.toml
(+114 files in other folders)
